@@ -17,7 +17,7 @@ name: App-Hashl
 provides:
   App::Hashl:
     file: lib/App/Hashl.pm
-    version: 0.2
+    version: 1.00
 requires:
   Digest::SHA: 0
   File::Copy: 0
@@ -27,4 +27,4 @@ requires:
   Storable: 0
   Time::Progress: 0
   perl: v5.10.0
-version: 0.2
+version: 1.00
