@@ -12,16 +12,16 @@ the distribution may already have been compromised, and you should
 not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 SHA1 33e5933544b7320568568d06ed9c52d868820bad Build.PL
 SHA1 cc97e889a41642cf85ee5f78e5ab4f1f81af9c00 COPYING
-SHA1 374d410cecb359b8b421f05b503cc746cbd6f3d4 Changelog
+SHA1 554c71c4bec91ab17b356538b8ac6b943fcf9bfc Changelog
 SHA1 b01080dae6b1645aad04be684210d46999685de8 MANIFEST
-SHA1 bcf6c29800483e7705038118602455c54b9db485 META.yml
+SHA1 9c4b9a06dcf0152e1daa30fdf2fea559e529e537 META.yml
 SHA1 fdb8958d4900c2ef0025aa3c28490c5c56a0eb26 README
-SHA1 372bf7051691ca12dc402be52c6e3de25e4a44e6 bin/hashl
-SHA1 0ea838893ad92df52f58a837401d902cf51c67b0 lib/App/Hashl.pm
+SHA1 b5f1cd081f7fc41b468d3f23e0db6e75e4f74486 bin/hashl
+SHA1 54ea59e79a558366d929818b291b6ff11cec416f lib/App/Hashl.pm
 SHA1 a6d4088f568c71b5617a8d88a45be37e1b7b38a6 t/00-compile.t
 SHA1 fc484e69e1a91c4c501199b88a1275c64828ff32 t/10-pod-coverage.t
 SHA1 52ce242b66cf3b1fdb95fd00f687bfa09fbbb6aa t/29-app-hashl.t
@@ -31,7 +31,17 @@ SHA1 f1d2d2f924e986ac86fdf7b36c94bcdf32beec15 t/in/4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iEYEARECAAYFAk3avzcACgkQjuWtMO0ss39PtgCfcSXe6yQtUGtpyUReJuVhcAY1
-rBQAn1tsKx+mZYhrB+g+seuAh8CDv5HS
-=eb00
+iQIcBAEBCAAGBQJOsQ6hAAoJEBANW/tRZuAFgeIQANQIz0OXJcFX8KQSiV7pzKcC
+kgVVgFCDnlKVDNhrphOyLY5CxMH6FXQn8XDJOdItvCTrGxVpUGFQbZZz7EvYIPJP
+WfchjXbtyW2oOFVVi02FUW5pY6/SWdvwB7uzEBla5dwpOGKZABAnJCU09c6v+F2r
+HyRnwQznbd5JpNVt5DkhEu+DB77VZCeidcTVUA3e9xYwKWpiNwhBKRYMZ0oK0e/R
+kGxiaWE0utzcwouOF5SMg2tb0kzPbC5+Z5mzNBkKw9wAj5CB39xtKL/xbTF2SKaB
+r4OixEkLgdvzvZ21l8qFUXP9SeADOHB/m3ZSbdoH0dnPFH/f0DjFCSD/7CsQXPuA
+psWyHz41wMBR6XiDmJCup3UO4gZqIv9CeuVaEke0bAzqWB4jJNXH/bw8z6NgCOzf
+7/yJPFrsSimivAzejJiDoZotu6JHFXQObAPtMxu+2NNa5Cb8yLWjZnR6Be33kr/w
+xg1il5vG7sFBiABAXNYZs6391EymRUyjB5wgqf3jsobqUfyUnepqqP7O1g7jQ41G
+gkta9L/QEYBEKqATcbQKVX9r19FGOa5Iye9eMVJujK7yDmYDS81NcgyOeRKBpCW8
+N/FNPjyaEisvzW9HIDtNOziyW6fKWbRmqNxWRTzvfNDjwbTA/pYtpooSooXo5Y4r
+2y1OYSHMJ+tMJOQHk71b
+=TaII
 -----END PGP SIGNATURE-----
