@@ -28,7 +28,7 @@ my ( $find_ref, $find_db_write );
 
 my $hashl;
 
-our $VERSION = '0.2';
+our $VERSION = '1.00';
 
 STDERR->autoflush(1);
 
@@ -341,6 +341,8 @@ sub cmd_info {
 }
 
 sub cmd_list {
+	my ($re) = @_;
+
 	printf(
 		"# hashl v%s   Read Size %d bytes (%s)\n",
 		$VERSION, $hashl->read_size(), $hashl->si_size( $hashl->read_size() ),
@@ -348,6 +350,11 @@ sub cmd_list {
 
 	for my $name ( sort $hashl->files() ) {
 		my $file = $hashl->file($name);
+
+		if ( $re and $name !~ m{$re} ) {
+			next;
+		}
+
 		printf( "%s %-7s %s\n",
 			$file->{hash}, $hashl->si_size( $file->{size} ), $name );
 	}
@@ -406,11 +413,11 @@ B<hashl> - Create database with partial file hashes, check if other files are in
 
 =head1 SYNOPSIS
 
-B<hashl> [B<-d> I<dbfile>] [B<-s> I<read-size>] I<action> [I<args>]
+B<hashl> [B<-fn>] [B<-d> I<dbfile>] [B<-s> I<read-size>] I<action> [I<args>]
 
 =head1 VERSION
 
-This manual documents hashl version 0.2
+This manual documents hashl version 1.00
 
 =head1 DESCRIPTION
 
@@ -443,9 +450,12 @@ files for B<copy> or B<find-new>.
 
 Show information on I<file> (or the database, if I<file> is not specified).
 
-=item B<list>
+=item B<list> [I<regex>]
 
 List all files and their hashes.  The list format is C<< hash size file >>.
+
+If I<regex> (a perl regular expression) is specifed, only matching files will
+be listed.
 
 =item B<list-files>
 
