@@ -1,4 +1,9 @@
-App::Hashl 0.2 - Mon May 23 2011
+hashl 1.00 - Wed Nov 02 2011
+
+    * Add "hashl list <regex>" to filter listed files by name
+    * Do not fail when encountering zero-length files
+
+hashl 0.2 - Mon May 23 2011
 
     * The internal representation of ignored hashes was changed
     * hashl update no longer re-adds ignored (but existing) files
